--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,10 @@ android {
 
     defaultConfig {
         applicationId "am.gtest.vortex"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 5
-        versionName "5.13.13"
+        versionName "5.13.14"
     }
 
     buildTypes {
@@ -65,9 +65,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
 
+    implementation platform('com.google.firebase:firebase-bom:29.0.3')
     implementation 'com.google.firebase:firebase-core:18.0.0'
     implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
-    implementation 'com.google.firebase:firebase-analytics:18.0.0'
+    implementation 'com.google.firebase:firebase-analytics'
     //implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
 
