--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="am.gtest.vortex">
 
+    <queries>
+        <package android:name="com.google.android.apps.maps" />
+    </queries>
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -12,6 +16,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:name=".application.MyApplication"
@@ -25,6 +30,11 @@
         android:fullBackupContent="true"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
 
         <uses-library
             android:name="org.apache.http.legacy"
@@ -301,6 +311,12 @@
             android:screenOrientation="portrait"
             tools:replace="android:screenOrientation"
             android:stateNotNeeded="true"/>
+
+        <service
+            android:name=".services.SendLocationSRV"
+            android:foregroundServiceType="location"
+            android:enabled="true"
+            android:exported="true" />
         <!--Old key from Thomas's separate google project. Used in old versions till 2.34 included-->
         <!--<meta-data-->
             <!--android:name="com.google.android.geo.API_KEY"-->
