--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,8 @@
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
 # org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-Xmx512M
+#-Xmx1536M
 
 android.useAndroidX=true
 android.enableJetifier=true
